# Demo-VexBot

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  constant-radius-response.xlsx  motor-393-high-speed-linearized.json  motor-393-high-speed.json  motor-393-high-speed.xlsx  project-cmake.pros
demo/: README.md
include/: calibrate.h  hid.h  input.h  main.h  motor.h  pi.h  ports.h  tracking.h
src/: calibrate.c  hid.c  init.c  input.c  motor.c  opcontrol.c  pi.c  tracking.c
toolchain/: Toolchain-VexCortexM3-MacOS.cmake
